--- a/index.html
+++ b/index.html
@@ -9,34 +9,27 @@
     <title> Michael's Film Store </title>
 
 <style>
+    * {box-sizing: border-box;}
 
     body {
         height: 100%;
         margin: 0;
-        background: #222;
         font-family: 'Work Sans', sans-serif;
-        font-weight: 400;
         background-image: url("film2.jpg");
     }
 
-    .container {
-        width: 80%
-        margin: 0 auto;
-    }
-
     header {
-        background: #55d6aa;
+        overflow: hidden;
+        background-color: black;
+        padding: 20px 10px;
     }
 
     .logo {
         float: left;
-        padding: 10px 0;
-    }
-
-    header::after {
-        content: '';
-        display: table;
-        clear: both;
+        padding: 10px;
+        width: 150px;
+        height: 50px;
+        margin-right: 300px;
     }
 
     nav {
@@ -51,35 +44,32 @@
 
     nav li {
         display: inline-block;
-        margin-left: 70px;
-        margin-right: 30px;
+        margin-left: 20px;
+        margin-right: 20px;
         padding-top: 23px;
         padding-bottom: 23px;
-
         position: relative;
     }
 
     nav a {
-        color: #444;
+        color:white;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 14px;
     }
 
     nav a:hover {
-        color: #000;
+        color: red;
     }
 
     nav a::before {
         content: '';
         display: block;
         height: 5px;
-        background-color: #444;
-
+        background-color: red;
         position: absolute;
         top: 0;
         width: 0%;
-
         transition: all ease-in-out 500ms;
 
     }
@@ -89,34 +79,31 @@
 
     }
 
-
+    @media screen and (max-width: 500px) {
+        header li {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
 </style>
-
-
 </head>
-
 <body>
-
-
 <header>
-    <div class="container">
-
-        <img src="assets/logo.png" alt="logo" class="logo">
-
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-
+    <div>
+        <img src="logo.png" alt="logo" class="logo">
     </div>
-   
+    <div>
+        <nav class="header-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">Contact</a></li>
+        </nav>
+    </div>
 </header>
-
-   
 </body>
-
 </html>
