--- a/index.html
+++ b/index.html
@@ -79,6 +79,56 @@
 
     }
 
+    #topmovies {
+        color: black;
+        text-align: center;
+        background-color: skyblue;
+        padding: 10px;
+        margin: 20px;
+    }
+
+    .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .flex-container > div {
+        background-color: #f1f1f1;
+        width: 100px;
+        margin: 10px;
+        text-align: center;
+        line-height: 75px;
+        font-size: 30px;
+    }
+
+    .flex-container {
+        margin-left: 70px;
+    }
+
+    .row {
+        margin: 20px;
+    }
+
+    .column {
+        float: left;
+        width: 33.33%;
+        padding: 10px;
+        height: 300px;
+    }
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .footer {
+        background-color: black;
+        padding: 10px;
+        text-align: center;
+        color: white;
+    }
+
     @media screen and (max-width: 500px) {
         header li {
             float: none;
@@ -89,21 +139,67 @@
             float: none;
         }
     }
+
+    @media (max-width: 600px) {
+        .column {
+            width: 100%;
+        }
+    }
 </style>
 </head>
 <body>
-<header>
-    <div>
-        <img src="logo.png" alt="logo" class="logo">
+    <header>
+        <div>
+            <img src="logo.png" alt="logo" class="logo">
+        </div>
+        <div>
+            <nav class="header-right">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">Contact</a></li>
+            </nav>
+        </div>
+    </header>
+    <div id="topmovies">
+        <h3>Top Movies</h3>
     </div>
-    <div>
-        <nav class="header-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">Contact</a></li>
-        </nav>
+    <div class="flex-container">
+        <img src="la la land.jpg" style="width: 200px;">
+        <img src="la la land.jpg" style="width: 200px;">
+        <img src="la la land.jpg" style="width: 200px;">  
+        <img src="la la land.jpg" style="width: 200px;">
+        <img src="la la land.jpg" style="width: 200px;">
+        <img src="la la land.jpg" style="width: 200px;">
+
     </div>
-</header>
+    <div class="row">
+        <div class="column" style="background-color:#aaa;">Hollywood<hr>
+            <br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Others >></a>
+        </div>
+        <div class="column" style="background-color:#bbb;">Bollywood<hr>
+            <br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Others >></a>
+        </div>
+        <div class="column" style="background-color:#ccc;">Nollywood<hr>
+            <br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Blahblahblah</a>
+            <br><br><a>Others >></a></div>
+    </div>
+    <div class="footer">
+        <p>Footer</p>
+    </div>
 </body>
 </html>
